--- a/render/src/layout/index.module.less
+++ b/render/src/layout/index.module.less
@@ -4,8 +4,8 @@
 }
 .menu_container {
   padding: 12px;
-  width: 300px;
-  background-color: #4f8d6f;
+  // width: 300px;
+  // background-color: #4f8d6f;
 }
 .main_container {
   box-sizing: border-box;
